--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "socket.io": "0.9",
     "express": "2.3.6",
-    "consolidate": "0.9.1"
+    "consolidate": "0.9.1",
+    "hogan.js": "2.0.0"
   },
   "engines": {
     "node": "0.8"
