--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "quiz",
+  "description": "HTML quiz show with buzzers. Fastest finger wins!",
   "version": "0.0.1",
+  "private": "true",
   "dependencies": {
     "socket.io": "0.9",
-    "express": "2.3.6",
+    "express": "3.2.6",
     "consolidate": "0.9.1",
-    "hogan.js": "2.0.0"
+    "hogan.js": "2.0.0",
+    "mongojs": "0.7.6",
+    "q": "0.9.6"
   },
   "engines": {
     "node": "0.8"
