--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "hogan.js": "2.0.0",
     "mongojs": "0.7.6",
     "uuid-js": "0.7.4",
-    "underscore": "~1.4.4"
+    "underscore": "1.4.4",
+    "cryptojs": "2.5.3",
+    "randomstring": "1.0.2"
   },
   "engines": {
     "node": "0.8"
