--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "version": "0.0.1",
   "private": "true",
   "dependencies": {
-    "socket.io": "0.9.16",
-    "express": "3.2.6",
-    "consolidate": "0.9.1",
-    "hogan.js": "2.0.0",
-    "mongojs": "0.7.6",
-    "uuid-js": "0.7.4",
-    "underscore": "1.4.4",
-    "cryptojs": "2.5.3",
-    "randomstring": "1.0.2"
+    "socket.io": "~0.9.16",
+    "express": "~3.2.6",
+    "consolidate": "~0.9.1",
+    "hogan.js": "~2.0.0",
+    "mongojs": "~0.7.6",
+    "uuid-js": "~0.7.4",
+    "underscore": "~1.4.4",
+    "cryptojs": "~2.5.3",
+    "randomstring": "~1.0.2",
+    "q": "~0.9.6"
   },
   "engines": {
     "node": "0.8"
